tests/fixtures/fail/generic_unused_invalid_body.sali
let invalid(T: type)(move value: T): i32 = value

let main(): i32 = 42
